# python_intro_udemy

./: README.md  build_book_remote.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
_sources/content/: book_intro.ipynb  myintro.ipynb
book/: _config.yml  _toc.yml  logo_temp.tif
content/: book_intro.html
content/Conclusion/: conclusion.html
content/chapter1/: interactive_python_and_print.html  intro.html  numerical_data_types.html  practice_questions.html  practice_questions_solutions.html  section1.html  section6_user_input.html  section7_practice_questions_solutions.html  string_float_int_conversion.html  string_formatting_indexing_slicing.html  strings_concatenation.html  user_input.html  variables_and_types.html
content/chapter2/: bool_data_type.html  chapter2_practice_questions.html  chapter2_practice_questions_solutions.html  comparison_operators.html  (+7 more)
notebooks/: booleans_comparison_logical_operators_udemy.ipynb  data_structures_udemy.ipynb  errors_and_exceptions_udemy.ipynb  if_elif_else_statements_udemy.ipynb  intro_import_statement_udemy.ipynb  intro_logical_operators_udemy.ipynb  intro_to_classes_udemy.ipynb  intro_to_functions_udemy.ipynb  intro_to_lists_udemy.ipynb  intro_to_loops_udemy.ipynb  intro_to_strings_udemy.ipynb  intro_to_variables_udemy.ipynb  more_basic_operators_udemy.ipynb  none_value_udemy.ipynb  numerical_data_types_udemy.ipynb  print_in_python_udemy.ipynb  read_write_files_udemy.ipynb  string_formatting_and_indexing_udemy.ipynb  truthy_falsy_values_udemy.ipynb  user_input_udemy.ipynb
(+341 files in other folders)
