[tool.poetry]
name = "teach_python"
version = "0.1.0"
description = "Course for teaching python to beginners."
authors = ["Chris Levy <christopherdavidlevy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
jupyter-book = "^0.8.1"
jupyter_contrib_nbextensions = "^0.5.1"
nb_black = "^1.0.7"
black = "^20.8b1"
ghp-import = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
